--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.4",
+    "@mui/x-date-pickers": "^5.0.1",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "next": "12.2.5",
