--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-promise-tracker": "^2.1.0",
     "react-virtuoso": "^2.18.0"
   },
   "devDependencies": {
